Revert "Fixed Sylexiad font word wrap in single post view"
This reverts commit e97e6052128bec32cf97d8e2f893775a20256327.

--- a/less/pad.less
+++ b/less/pad.less
@@ -277,7 +277,6 @@ body#pad {
 		}
 		&.syl {
 			font-family: @sylexiadFont;
-			line-height: 1.4;
 		}
 		&.mono, &.code {
 			padding-left: 1em;
